syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/merchant_entity.proto";

option java_outer_classname = "MerchantToPaymentService";

service MerchantToPayment {
  option (kalix.codegen) = {
    action: {}
  };

  rpc OnMerchantAggregationRequested(entity.MerchantAggregationRequested) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "merchant"
    };
  }

  rpc OnMerchantPaymentRequested(entity.MerchantPaymentRequested) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "merchant"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "merchant"
    };
  }
}
